[package]
name = "gcmd-component-framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
name = "component_framework"
path = "src/lib.rs"

[dependencies]
async-channel.workspace = true
component-framework-macros = { path = "../gcmd-component-framework-macros", package = "gcmd-component-framework-macros" }
futures.workspace = true
gtk.workspace = true

[lints]
workspace = true
