## Process this file with automake to produce Makefile.in

SUBDIRS = device-icons file-type-icons mime-icons

## desktop icon
dtidir = $(datadir)/pixmaps
dti_DATA = gnome-commander.png

## application pixmaps
pixmapsdir = $(datadir)/pixmaps/@PACKAGE@
pixmaps_DATA = \
	copy_file_names.xpm \
	desktop.xpm \
	exec_wheel.xpm \
	exec.xpm \
	flip-horizontal-16.xpm \
	flip-vertical-16.xpm \
	ftp_connect.xpm \
	ftp_disconnect.xpm \
	ftp.xpm \
	gnome_cmd_arrow_blank.xpm \
	gnome_cmd_arrow_down.xpm \
	gnome_cmd_arrow_up.xpm \
	gnome-commander.xpm \
	home.xpm \
	internal-viewer.xpm \
	key.xpm \
	lock.xpm \
	menu_bookmark.xpm \
	mkdir.xpm \
	overlay_symlink.xpm \
	overlay_umount.xpm \
	parent_dir.xpm \
	python-plugin.svg \
	root_dir.xpm \
	rotate-180-16.xpm \
	rotate-270-16.xpm \
	rotate-90-16.xpm \
	server.xpm \
	smb-computer.xpm \
	smb-network.xpm \
	toggle_horizontal.xpm \
	toggle_vertical.xpm \
	terminal.svg

EXTRA_DIST = $(dti_DATA) $(pixmaps_DATA)
