# SPDX-FileCopyrightText: 2022 Uwe Scholz <u.scholz83@gmx.de>
#
# SPDX-License-Identifier: GPL-3.0-or-later

i18n.gettext(
  meson.project_name(),
  args: [
    '--from-code=UTF-8', '--add-comments',
    '--keyword=_', '--keyword=N_',
    '--keyword=C_:1c,2', '--keyword=NC_:1c,2'
  ],
  data_dirs: meson.project_source_root() / 'data'
)
